Refactored the notification frontend component to avoid repeating the types.