@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017 SUSE LLC
+ * Copyright (c) 2017--2025 SUSE LLC
  *
  * This software is licensed to you under the GNU General Public License,
  * version 2 (GPLv2). There is NO WARRANTY for this software, express or
@@ -7,24 +7,29 @@
  * FOR A PARTICULAR PURPOSE. You should have received a copy of GPLv2
  * along with this software; if not, see
  * http://www.gnu.org/licenses/old-licenses/gpl-2.0.txt.
- *
- * Red Hat trademarks are not licensed under GPLv2. No permission is
- * granted to use or replicate Red Hat trademarks that are incorporated
- * in this software or its documentation.
  */
 package com.suse.manager.webui.controllers;
 
 import static com.suse.manager.webui.utils.SparkApplicationHelper.asJson;
+import static com.suse.manager.webui.utils.SparkApplicationHelper.badRequest;
+import static com.suse.manager.webui.utils.SparkApplicationHelper.internalServerError;
+import static com.suse.manager.webui.utils.SparkApplicationHelper.notFound;
+import static com.suse.manager.webui.utils.SparkApplicationHelper.success;
 import static com.suse.manager.webui.utils.SparkApplicationHelper.withCsrfToken;
 import static com.suse.manager.webui.utils.SparkApplicationHelper.withUser;
 import static com.suse.manager.webui.utils.SparkApplicationHelper.withUserPreferences;
 import static spark.Spark.get;
 import static spark.Spark.post;
 
+import com.redhat.rhn.common.localization.LocalizationService;
 import com.redhat.rhn.domain.channel.Channel;
 import com.redhat.rhn.domain.channel.ChannelFactory;
+import com.redhat.rhn.domain.notification.NotificationMessage;
 import com.redhat.rhn.domain.notification.UserNotification;
 import com.redhat.rhn.domain.notification.UserNotificationFactory;
+import com.redhat.rhn.domain.notification.types.ChannelSyncFailed;
+import com.redhat.rhn.domain.notification.types.NotificationType;
+import com.redhat.rhn.domain.notification.types.OnboardingFailed;
 import com.redhat.rhn.domain.user.User;
 import com.redhat.rhn.taskomatic.TaskomaticApi;
 import com.redhat.rhn.taskomatic.TaskomaticApiException;
@@ -36,6 +41,8 @@ import com.suse.manager.reactor.messaging.RegisterMinionEventMessageAction;
 import com.suse.manager.webui.services.iface.SaltApi;
 import com.suse.manager.webui.services.iface.SystemQuery;
 import com.suse.manager.webui.utils.gson.NotificationMessageJson;
+import com.suse.manager.webui.utils.gson.NotificationTypeJson;
+import com.suse.manager.webui.utils.gson.ResultJson;
 import com.suse.manager.webui.websocket.Notification;
 import com.suse.utils.Json;
 
@@ -43,6 +50,13 @@ import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.google.gson.reflect.TypeToken;
 
+import org.apache.commons.lang3.builder.EqualsBuilder;
+import org.apache.commons.lang3.builder.HashCodeBuilder;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+
+import java.util.Arrays;
+import java.util.Comparator;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
@@ -59,6 +73,10 @@ import spark.template.jade.JadeTemplateEngine;
  * Controller class providing backend code for the messages page.
  */
 public class NotificationMessageController {
+
+    private static final Logger LOGGER = LogManager.getLogger(NotificationMessageController.class);
+
+    private static final LocalizationService LOCALIZER = LocalizationService.getInstance();
 
     private static final Gson GSON = new GsonBuilder()
             .registerTypeAdapter(Date.class, new UserLocalizationDateAdapter())
@@ -100,10 +118,8 @@ public class NotificationMessageController {
                 asJson(withUser(notificationMessageController::updateMessagesStatus)));
         post("/manager/notification-messages/delete",
                 asJson(withUser(notificationMessageController::delete)));
-        post("/manager/notification-messages/retry-onboarding/:minionId",
-                asJson(withUser(notificationMessageController::retryOnboarding)));
-        post("/manager/notification-messages/retry-reposync/:channelId",
-                asJson(withUser(notificationMessageController::retryReposync)));
+        post("/manager/notification-messages/retry/:notificationId",
+                asJson(withUser(notificationMessageController::retry)));
     }
 
     /**
@@ -115,7 +131,15 @@ public class NotificationMessageController {
      * @return the ModelAndView object to render the page
      */
     public ModelAndView getList(Request request, Response response, User user) {
-        return new ModelAndView(new HashMap<>(), "templates/notification-messages/list.jade");
+        var notificationTypes = Arrays.stream(NotificationType.values())
+            .map(NotificationTypeJson::new)
+            .sorted(Comparator.comparing(NotificationTypeJson::description))
+            .toList();
+
+        Map<Object, Object> dataMap = new HashMap<>();
+        dataMap.put("notificationTypes", GSON.toJson(notificationTypes));
+
+        return new ModelAndView(dataMap, "templates/notification-messages/list.jade");
     }
 
 
@@ -128,8 +152,8 @@ public class NotificationMessageController {
      * @return JSON result of the API call
      */
     public String dataUnread(Request request, Response response, User user) {
-        Object data = getJSONNotificationMessages(UserNotificationFactory.listUnreadByUser(user), user);
-        return GSON.toJson(data);
+        var data = getJSONNotificationMessages(UserNotificationFactory.listUnreadByUser(user));
+        return success(response, ResultJson.success(data));
     }
 
     /**
@@ -141,8 +165,8 @@ public class NotificationMessageController {
      * @return JSON result of the API call
      */
     public String dataAll(Request request, Response response, User user) {
-        Object data = getJSONNotificationMessages(UserNotificationFactory.listAllByUser(user), user);
-        return GSON.toJson(data);
+        var data = getJSONNotificationMessages(UserNotificationFactory.listAllByUser(user));
+        return success(response, ResultJson.success(data));
     }
 
     /**
@@ -157,23 +181,13 @@ public class NotificationMessageController {
         List<Long> messageIds = Json.GSON.fromJson(request.body(), new TypeToken<List<Long>>() { }.getType());
 
         List<UserNotification> notifications = messageIds.stream()
-                .map(id -> UserNotificationFactory.lookupByUserAndMessageId(id, user))
-                .flatMap(Optional::stream)
-                .collect(Collectors.toList());
+            .flatMap(id -> UserNotificationFactory.lookupByUserAndMessageId(id, user).stream())
+            .toList();
 
         UserNotificationFactory.delete(notifications);
 
         Notification.spreadUpdate(Notification.USER_NOTIFICATIONS);
-
-        Map<String, String> data = new HashMap<>();
-        data.put("severity", "success");
-        if (messageIds.size() == 1) {
-            data.put("text", "1 message deleted successfully");
-        }
-        else {
-            data.put("text", messageIds.size() + " messages deleted successfully");
-        }
-        return GSON.toJson(data);
+        return success(response);
     }
 
     /**
@@ -185,117 +199,134 @@ public class NotificationMessageController {
      * @return JSON result of the API call
      */
     public String updateMessagesStatus(Request request, Response response, User user) {
-        Map<String, Object> map = GSON.fromJson(request.body(), Map.class);
-        List<Long> messageIds = Json.GSON.fromJson(
-                map.get("messageIds").toString(),
-                new TypeToken<List<Long>>() { }.getType());
-        boolean flagAsRead = (boolean) map.get("flagAsRead");
+        UpdateMessageStatusRequest statusChange = GSON.fromJson(request.body(), UpdateMessageStatusRequest.class);
 
-        messageIds.forEach(messageId -> {
-            Optional<UserNotification> un = UserNotificationFactory.lookupByUserAndMessageId(messageId, user);
-            if (un.isPresent()) {
-                UserNotificationFactory.updateStatus(un.get(), flagAsRead);
-            }
-        });
+        statusChange.getMessageIds().stream()
+            .flatMap(id -> UserNotificationFactory.lookupByUserAndMessageId(id, user).stream())
+            .forEach(notification -> UserNotificationFactory.updateStatus(notification, statusChange.isFlagAsRead()));
 
         Notification.spreadUpdate(Notification.USER_NOTIFICATIONS);
-
-        Map<String, String> data = new HashMap<>();
-        data.put("severity", "success");
-        if (messageIds.size() == 1) {
-            data.put("text", "1 message read status updated successfully");
-        }
-        else {
-            data.put("text", messageIds.size() + " messages status updated successfully");
-        }
-        return GSON.toJson(data);
+        return success(response);
     }
 
     /**
-     * Re-trigger onboarding the minion
+     * Retries an actionable notification
      *
      * @param request the request
      * @param response the response
      * @param user the user
      * @return JSON result of the API call
      */
-    public String retryOnboarding(Request request, Response response, User user) {
-        String minionId = request.params("minionId");
+    public String retry(Request request, Response response, User user) {
+        long notificationId = Long.parseLong(request.params("notificationId"));
 
-        String severity = "success";
-        String resultMessage = "Onboarding restarted of the minioniId '%s'";
+        return UserNotificationFactory.lookupByUserAndMessageId(notificationId, user)
+            .map(UserNotification::getMessage)
+            .map(NotificationMessage::getNotificationData)
+            .map(notificationData -> {
+                if (notificationData instanceof OnboardingFailed onboardingFailed) {
+                    return retryOnboarding(response, onboardingFailed.getMinionId());
+                }
 
-        RegisterMinionEventMessageAction action =
-                new RegisterMinionEventMessageAction(systemQuery, saltApi, paygManager, attestationManager);
+                if (notificationData instanceof ChannelSyncFailed channelSyncFailed) {
+                    return retryReposync(response, user, channelSyncFailed.getChannelId());
+                }
+
+                String typeDescription = notificationData.getType().getDescription();
+                String errorMessage = LOCALIZER.getMessage("notification.type_not_actionable", typeDescription);
+
+                return badRequest(response, errorMessage);
+            })
+            .orElseGet(() -> notFound(response, LOCALIZER.getMessage("notification.not_found", notificationId)));
+    }
+
+    private String retryOnboarding(Response response, String minionId) {
+        var action = new RegisterMinionEventMessageAction(systemQuery, saltApi, paygManager, attestationManager);
         action.execute(new RegisterMinionEventMessage(minionId, Optional.empty()));
 
-        Map<String, String> data = new HashMap<>();
-        data.put("severity", severity);
-        data.put("text", String.format(resultMessage, minionId));
-        return GSON.toJson(data);
+        String resultMessage = LOCALIZER.getMessage("notification.onboardingfailed.action.success", minionId);
+        return success(response, ResultJson.successMessage(resultMessage));
     }
 
-    /**
-     * Get the Label of a channel
-     *
-     * @param channel the channel
-     * @return Optional containing the String of the Channel Label or empty
-     */
-    private Optional<String> getChannelLabel(Channel channel) {
-        if (channel == null) {
-            return Optional.empty();
-        }
-        return Optional.ofNullable(channel.getLabel());
-    }
-
-    /**
-     * Re-trigger channel reposync
-     *
-     * @param request the request
-     * @param response the response
-     * @param user the user
-     * @return JSON result of the API call
-     */
-    public String retryReposync(Request request, Response response, User user) {
-        Long channelId = Long.valueOf(request.params("channelId"));
-
-        String resultMessage = "Reposync restarted for the channel '%s'";
-        String severity = "success";
-
+    private String retryReposync(Response response, User user, long channelId) {
         Channel channel = ChannelFactory.lookupById(channelId);
-        Optional<String> channelLabel = getChannelLabel(channel);
+        if (channel == null) {
+            String message = LOCALIZER.getMessage("notification.channelsyncfailed.action.not_found", channelId);
+            return notFound(response, message);
+        }
 
-        if (channel != null) {
+        try {
             TaskomaticApi taskomatic = new TaskomaticApi();
-            try {
-                taskomatic.scheduleSingleRepoSync(channel, user);
-            }
-            catch (TaskomaticApiException e) {
-                severity = "error";
-                resultMessage = "Failed to restart reposync for the channel '%s': " + e.getMessage();
-            }
-        }
-        else {
-            severity = "error";
-            resultMessage = "Failed to restart reposync. Channel ID does not exist: %s";
-        }
+            taskomatic.scheduleSingleRepoSync(channel, user);
 
-        Map<String, String> data = new HashMap<>();
-        data.put("severity", severity);
-        data.put("text", String.format(resultMessage, channelLabel.orElse(String.valueOf(channelId))));
-        return GSON.toJson(data);
+            String message = LOCALIZER.getMessage("notification.channelsyncfailed.action.success", channel.getLabel());
+            return success(response, ResultJson.successMessage(message));
+        }
+        catch (TaskomaticApiException ex) {
+            LOGGER.error("Failed to restart reposync for the channel {}", channel.getLabel(), ex);
+            String message = LOCALIZER.getMessage("notification.channelsyncfailed.action.failed",
+                channel.getLabel(), ex.getMessage());
+            return internalServerError(response, message);
+        }
     }
 
-    /**
-     * Convert a list of {@link UserNotification} to a {@link NotificationMessageJson}
-     *
-     * @param list of UserNotification
-     * @param user the current user
-     * @return a list of JSONNotificationMessages
-     */
-    public List<NotificationMessageJson> getJSONNotificationMessages(List<UserNotification> list, User user) {
+    private List<NotificationMessageJson> getJSONNotificationMessages(List<UserNotification> list) {
         return list.stream()
                 .map(un -> new NotificationMessageJson(un.getMessage(), un.getRead()))
                 .collect(Collectors.toList());
+    }
+
+    private static class UpdateMessageStatusRequest {
+        private List<Long> messageIds;
+        private boolean flagAsRead;
+
+        public List<Long> getMessageIds() {
+            return messageIds;
+        }
+
+        public void setMessageIds(List<Long> messageIdsIn) {
+            this.messageIds = messageIdsIn;
+        }
+
+        public boolean isFlagAsRead() {
+            return flagAsRead;
+        }
+
+        public void setFlagAsRead(boolean flagAsReadIn) {
+            this.flagAsRead = flagAsReadIn;
+        }
+
+        @Override
+        public boolean equals(Object o) {
+            if (this == o) {
+                return true;
+            }
+
+            if (!(o instanceof UpdateMessageStatusRequest that)) {
+                return false;
+            }
+
+            return new EqualsBuilder()
+                .append(isFlagAsRead(), that.isFlagAsRead())
+                .append(getMessageIds(), that.getMessageIds())
+                .isEquals();
+        }
+
+        @Override
+        public int hashCode() {
+            return new HashCodeBuilder(17, 37)
+                .append(getMessageIds())
+                .append(isFlagAsRead())
+                .toHashCode();
+        }
+
+        @Override
+        public String toString() {
+            final StringBuilder sb = new StringBuilder("UpdateMessageStatusRequest{");
+            sb.append("messageIds=").append(messageIds);
+            sb.append(", flagAsRead=").append(flagAsRead);
+            sb.append('}');
+            return sb.toString();
+        }
     }
 }
